@@ -158,7 +158,7 @@ public class ThreadsDataManager extends DataManager {
             int[] newIds = monitoredData.getNewThreadIds();
 
             for (int i = 0; i < newThreadsNum; i++) {
-                idToIndex.put(new Integer(newIds[i]), new Integer(i + max)); // add new threads to the end of the array
+                idToIndex.put(Integer.valueOf(newIds[i]), Integer.valueOf(i + max)); // add new threads to the end of the array
             }
         }
 
@@ -177,7 +177,7 @@ public class ThreadsDataManager extends DataManager {
                 }
                 // precise states timers
                 for (int i = 0; i < exThreadIds.length; i++) {
-                    Integer intIndex = (Integer) idToIndex.get(new Integer(exThreadIds[i]));
+                    Integer intIndex = (Integer) idToIndex.get(Integer.valueOf(exThreadIds[i]));
                     int index = intIndex.intValue();
                     ThreadData tData = threadData[index];
                     tData.add(exTimestamps[i], exStates[i]);
@@ -200,7 +200,7 @@ public class ThreadsDataManager extends DataManager {
                     startTime = monitoredData.getStateTimestamps()[0];
                 }
                 for (int threadIdx = 0; threadIdx < nThreads; threadIdx++) {
-                    Integer intIndex = (Integer) idToIndex.get(new Integer(threadIds[threadIdx]));
+                    Integer intIndex = (Integer) idToIndex.get(Integer.valueOf(threadIds[threadIdx]));
                     int index = intIndex.intValue();
                     byte[] threadStates = states[threadIdx];
                     ThreadData tData = threadData[index];
